2016-08-23 Lina Necib  <lnecib@mit.edu>

	*VERSION:
	*NEWS:
	*AUTHORS:
	*COPYING:
	*README:
	*EnergyCorrelator.cc
	Added if statement that the ECF and ECFNs return exactly zero
 	if the number of particles is less than N of the ECF.
	*EnergyCorrelator.hh
	*example.cc	
	*example_basic_usage.cc
	Updated this example.

2016-08-21 Lina Necib  <lnecib@mit.edu>

	*VERSION:
	*NEWS:
	*AUTHORS:
	*COPYING:
	*README:
	*EnergyCorrelator.cc
	Added Cseries. 
	*EnergyCorrelator.hh
	Added Cseries.
	*example.cc
	Added example of Cseries	
	*example_basic_usage.cc
	Simplified examples.

2016-08-17 Lina Necib  <lnecib@mit.edu>

	*VERSION:
	*NEWS:
	*AUTHORS:
	Added placeholder for new reference
	*COPYING:
	Added placeholder for new reference
	*README:
	added information on different measures E_inv
	*EnergyCorrelator.cc
	Minor text edits + added comments
	*EnergyCorrelator.hh
	Minor text edits + added comments
	*example_basic_usage.cc
	added a simplified example file that shows the use of the
	different observables.


2016-06-23 Lina Necib  <lnecib@mit.edu>

	*VERSION:
	1.2.0-alpha0
	*NEWS:
	*AUTHORS:
	Lina Necib
	*COPYING:
	*README:
        added descriptions of functions that will appear shortly 
	arXiv:160X.XXXXX

	*EnergyCorrelator.cc
	added code to calculate normalized ECFS.
	*EnergyCorrelator.hh
	added code to calculate normalized ECFS, Nseries, generalized
	D2, N2, N3, and M2.

	*example.cc
	added calculation of normalized ECFS, Nseries, generalized 
	D2, N2, N3, and M2 to example file.


2014-11-20  Jesse Thaler  <jthaler@mit.edu>

	* README:
	Typos fixed

2014-11-13  Andrew Larkoski  <larkoski@mit.edu>

	*VERSION:
	*NEWS:
        release of version 1.1.0

	*AUTHORS:
	*COPYING:
	*README:
        added reference to arXiv:1409.6298.

	*EnergyCorrelator.cc
	*EnergyCorrelator.hh
	added code to calculate C1, C2, and D2 observables.

	*example.cc
	added calculation of C1, C2, and D2 to example file.

2013-05-01  Gavin Salam  <gavin.salam@cern.ch>

	* VERSION:
	* NEWS: