@@ -1,1 +1,1 @@
-1.2.0-alpha0
+1.2.0-alpha1
